// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`angular full output snapshots > BatchUpdates 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-batch-updates', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<span>{{ sum() }}</span>
<button (click)="x.set(x() + 1); y.set(y() + 1);">Both</button>
</div>\` })
export class BatchUpdatesComponent
{
klass = input<string>()
x = signal(0)
y = signal(0)
sum = computed(() => this.x() + this.y())
}
"
`;

exports[`angular full output snapshots > BoundField 1`] = `
"import { Component, signal, computed, effect, input, model } from "@angular/core";
@Component({ standalone: true, selector: 'ink-field', host: { style: 'display: contents' }, template: \`<input [value]="value()" [class]="klass()" (input)="value.set($event.target.value)" />\` })
export class FieldComponent
{
klass = input<string>()
value = model<string>()
}
"
`;

exports[`angular full output snapshots > Composite 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-composite', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<span id="sum">{{ sum() }}</span>
<button id="incX" (click)="x.set(x() + 1)">+X</button>
<button id="incY" (click)="y.set(y() + 1)">+Y</button>
</div>\` })
export class CompositeComponent
{
klass = input<string>()
x = signal(1)
y = signal(2)
sum = computed(() => this.x() + this.y())
constructor() { effect(() => { console.log('sum:', this.sum()); }) }
}
"
`;

exports[`angular full output snapshots > Conditional 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-conditional', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
@if (visible()) {
<span>Visible</span>
} @else {
<span>Hidden</span>
}
<button (click)="visible.set(!visible())">Toggle</button>
</div>\` })
export class ConditionalComponent
{
klass = input<string>()
visible = signal(true)
}
"
`;

exports[`angular full output snapshots > ConditionalClass 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-conditional-class', host: { style: 'display: contents' }, template: \`<div [class]="(active() ? 'active' : 'inactive') + (klass() ? ' ' + klass() : '')">
<button (click)="active.set(!active())">Toggle</button>
</div>\` })
export class ConditionalClassComponent
{
klass = input<string>()
active = signal(false)
}
"
`;

exports[`angular full output snapshots > ControlledSelect 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-controlled-select', host: { style: 'display: contents' }, template: \`<select [value]="value()" [class]="klass()" (change)="value.set($event.target.value)">
<option value="a">A</option>
<option value="b">B</option>
<option value="c">C</option>
</select>\` })
export class ControlledSelectComponent
{
klass = input<string>()
value = signal('b')
}
"
`;

exports[`angular full output snapshots > ControlledTextarea 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-controlled-textarea', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<textarea [value]="text()" (input)="text.set($event.target.value)"></textarea>
<p>{{ text().length }} characters</p>
</div>\` })
export class ControlledTextareaComponent
{
klass = input<string>()
text = signal('')
}
"
`;

exports[`angular full output snapshots > Counter 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-counter', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<p>{{ count() }}</p>
<p>{{ doubled() }}</p>
<button (click)="count.set(count() + 1)">+1</button>
</div>\` })
export class CounterComponent
{
klass = input<string>()
count = signal(0)
doubled = computed(() => this.count() * 2)
constructor() { effect(() => { console.log('count:', this.count()); }) }
}
"
`;

exports[`angular full output snapshots > DefineSlotBasic 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-define-slot-basic', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<header>
<ng-content select="[slot=header]"></ng-content>
</header>
<main>
<ng-content></ng-content>
</main>
</div>\` })
export class DefineSlotBasicComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > DynamicList 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-dynamic-list', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<input [value]="input()" (input)="input.set($event.target.value)" />
<button (click)="items.set([...items(), input()]); input.set('')">Add</button>
<ul>
@for (item of items(); track i; let i = $index) {
<li>{{ item }}</li>
}
</ul>
</div>\` })
export class DynamicListComponent
{
klass = input<string>()
items = signal([])
input = signal('')
}
"
`;

exports[`angular full output snapshots > EffectCleanup 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-effect-cleanup', host: { style: 'display: contents' }, template: \`<button [class]="klass()" (click)="active.set(!active())">Toggle</button>\` })
export class EffectCleanupComponent
{
klass = input<string>()
active = signal(true)
constructor() { effect(() => { if (this.active()) { const id = setInterval(() => console.log('tick'), 1000); return () => clearInterval(id); } }) }
}
"
`;

exports[`angular full output snapshots > ElementRef 1`] = `
"import { Component, signal, computed, effect, input, afterNextRender, viewChild, ElementRef } from "@angular/core";
@Component({ standalone: true, selector: 'ink-element-ref', host: { style: 'display: contents' }, template: \`<input placeholder="auto-focus" [class]="klass()" #inputRef />\` })
export class ElementRefComponent
{
klass = input<string>()
constructor() { afterNextRender(() => { this.inputRef()?.nativeElement?.focus(); }) }
inputRef = viewChild<ElementRef>('inputRef')
}
"
`;

exports[`angular full output snapshots > EmitButton 1`] = `
"import { Component, signal, computed, effect, input, output } from "@angular/core";
@Component({ standalone: true, selector: 'ink-emit-button', host: { style: 'display: contents' }, template: \`<button [class]="klass()" (click)="press.emit(1)">Go</button>\` })
export class EmitButtonComponent
{
klass = input<string>()
press = output()
}
"
`;

exports[`angular full output snapshots > ForLoop 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-for-loop', host: { style: 'display: contents' }, template: \`<ul [class]="klass()">
@for (item of items(); track item) {
<li>{{ item }}</li>
}
</ul>\` })
export class ForLoopComponent
{
klass = input<string>()
items = signal(['Apple', 'Banana', 'Cherry'])
}
"
`;

exports[`angular full output snapshots > FormField 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-form-field', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<input [value]="value()" (input)="value.set($event.target.value)" />
<p>{{ value() }}</p>
</div>\` })
export class FormFieldComponent
{
klass = input<string>()
value = signal('')
}
"
`;

exports[`angular full output snapshots > HasSlot 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-has-slot', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<span class="prefix">
<ng-content select="[slot=prefix]"></ng-content>
</span>
<main>
<ng-content></ng-content>
</main>

</div>\` })
export class HasSlotComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > HasSlotFallback 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-has-slot-fallback', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<span class="has-suffix">present</span>
</div>\` })
export class HasSlotFallbackComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > IButton 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-button', host: { style: 'display: contents' }, template: \`<button [disabled]="disabled()" [class]="klass()">{{ label() }}</button>\` })
export class IButtonComponent
{
klass = input<string>()
label = input.required<string>()
disabled = input<boolean>()
}
"
`;

exports[`angular full output snapshots > Lifecycle 1`] = `
"import { Component, signal, computed, effect, input, afterNextRender, inject, DestroyRef } from "@angular/core";
@Component({ standalone: true, selector: 'ink-lifecycle', host: { style: 'display: contents' }, template: \`<span [class]="klass()">{{ mounted() ? 'mounted' : 'pending' }}</span>\` })
export class LifecycleComponent
{
klass = input<string>()
mounted = signal(false)
constructor() { afterNextRender(() => { this.mounted.set(true); }); inject(DestroyRef).onDestroy(() => { console.log('cleanup'); }) }
}
"
`;

exports[`angular full output snapshots > MemoChain 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-memo-chain', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<span>{{ label() }}</span>
<button (click)="base.set(base() + 1)">+1</button>
</div>\` })
export class MemoChainComponent
{
klass = input<string>()
base = signal(1)
doubled = computed(() => this.base() * 2)
quadrupled = computed(() => this.doubled() * 2)
label = computed(() => \`Value: \${this.quadrupled()}\`)
}
"
`;

exports[`angular full output snapshots > MixedControlFlow 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-mixed-control-flow', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<input [value]="filter()" (input)="filter.set($event.target.value)" />
<ul>
@for (item of items(); track item) {
@if (item.includes(filter())) {
<li>{{ item }}</li>
}
}
</ul>
</div>\` })
export class MixedControlFlowComponent
{
klass = input<string>()
items = signal(['a', 'b', 'c'])
filter = signal('')
}
"
`;

exports[`angular full output snapshots > ModelInput 1`] = `
"import { Component, signal, computed, effect, input, model } from "@angular/core";
@Component({ standalone: true, selector: 'ink-model-input', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<input [value]="value()" (input)="value.set($event.target.value)" />
<p>{{ value() }}</p>
</div>\` })
export class ModelInputComponent
{
klass = input<string>()
value = model<string>()
}
"
`;

exports[`angular full output snapshots > MultiChildSlot 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-box', host: { style: 'display: contents' }, template: \`<div [class]="'box' + (klass() ? ' ' + klass() : '')">
<ng-content></ng-content>
</div>\` })
export class BoxComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > MultiRefs 1`] = `
"import { Component, signal, computed, effect, input, afterNextRender, viewChild, ElementRef } from "@angular/core";
@Component({ standalone: true, selector: 'ink-multi-refs', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<input placeholder="focus me" #inputRef />
<button #buttonRef>Click</button>
</div>\` })
export class MultiRefsComponent
{
klass = input<string>()
constructor() { afterNextRender(() => { this.inputRef()?.nativeElement?.focus(); }) }
inputRef = viewChild<ElementRef>('inputRef')
buttonRef = viewChild<ElementRef>('buttonRef')
}
"
`;

exports[`angular full output snapshots > MultipleComponentsPerFile 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-label', host: { style: 'display: contents' }, template: \`<span [class]="klass()">{{ text() }}</span>\` })
export class LabelComponent
{
klass = input<string>()
text = input.required<string>()
}
"
`;

exports[`angular full output snapshots > NativeBind 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-native-bind', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<input [value]="text()" (input)="text.set($event.target.value)" />
<p>{{ text() }}</p>
</div>\` })
export class NativeBindComponent
{
klass = input<string>()
text = signal('')
}
"
`;

exports[`angular full output snapshots > PropDefaults 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-prop-defaults', host: { style: 'display: contents' }, template: \`<div [style]="\\\`color: \\\${color()}\\\`" [class]="klass()">{{ size() }}</div>\` })
export class PropDefaultsComponent
{
klass = input<string>()
color = input<string>('blue')
size = input.required<number>()
}
"
`;

exports[`angular full output snapshots > SlotBasic 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-slot-basic', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<ng-content></ng-content>
</div>\` })
export class SlotBasicComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > SlotInConditional 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-slot-in-conditional', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<ng-content select="[slot=header]"></ng-content>
@if (expanded()) {
<ng-content></ng-content>
}
</div>\` })
export class SlotInConditionalComponent
{
klass = input<string>()
expanded = signal(true)
}
"
`;

exports[`angular full output snapshots > SlotNamed 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-slot-named', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<header>
<ng-content select="[slot=header]"></ng-content>
</header>
<main>
<ng-content></ng-content>
</main>
<footer>
<ng-content select="[slot=footer]"></ng-content>
</footer>
</div>\` })
export class SlotNamedComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > SlotScoped 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-slot-scoped', host: { style: 'display: contents' }, template: \`<ul [class]="klass()">
@for (item of items(); track item.id; let index = $index) {
<li>
<!-- scoped slot 'item': args are not projectable in Angular; rendering default content -->
{{ index }}
: 
{{ item.label }}
</li>
}
</ul>\` })
export class SlotScopedComponent
{
klass = input<string>()
items = signal([{ id: 1, label: 'One' }, { id: 2, label: 'Two' }])
}
"
`;

exports[`angular full output snapshots > SlotScopedSingle 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-slot-scoped-single', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<!-- scoped slot 'default': args are not projectable in Angular; rendering default content -->
<span>{{ value() }}</span>
</div>\` })
export class SlotScopedSingleComponent
{
klass = input<string>()
value = signal('hello')
}
"
`;

exports[`angular full output snapshots > SlotWithDefault 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-slot-with-default', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<main>
<ng-content><p>Default content</p></ng-content>
</main>
<footer>
<ng-content select="[slot=actions]"><span>Action area</span></ng-content>
</footer>
</div>\` })
export class SlotWithDefaultComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > SlotWithFallback 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-slot-with-fallback', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
<ng-content select="[slot=header]"><h1>Default Header</h1></ng-content>
<ng-content>Default body content</ng-content>
</div>\` })
export class SlotWithFallbackComponent
{
klass = input<string>()
}
"
`;

exports[`angular full output snapshots > SwitchTabs 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-switch-tabs', host: { style: 'display: contents' }, template: \`<div [class]="klass()">
@if (tab() === 'a') {
<p>Tab A</p>
}@else if (tab() === 'b') {
<p>Tab B</p>
}
<button (click)="tab.set(tab() === 'a' ? 'b' : 'a')">Switch</button>
</div>\` })
export class SwitchTabsComponent
{
klass = input<string>()
tab = signal('a')
}
"
`;

exports[`angular multi-component files > ComponentRef (all files) 1`] = `
"import { Component, signal, computed, effect, input } from "@angular/core";
@Component({ standalone: true, selector: 'ink-child', host: { style: 'display: contents' }, template: \`<div [class]="klass()">Child</div>\` })
export class ChildComponent
{
klass = input<string>()
}

import { Component, signal, computed, effect, input, afterNextRender, viewChild, ElementRef } from "@angular/core";
import { ChildComponent as Child } from "./Child.component";
@Component({ standalone: true, selector: 'ink-component-ref', host: { style: 'display: contents' }, imports: [Child], template: \`<ink-child [klass]="klass()"></ink-child>\` })
export class ComponentRefComponent
{
klass = input<string>()
constructor() { afterNextRender(() => { console.log(this.childRef()); }) }
childRef = viewChild<ElementRef>('childRef')
}
"
`;
